--- a/css/contact_us.css
+++ b/css/contact_us.css
@@ -4,35 +4,10 @@
     font-family: 'Source Sans Pro', sans-serif;
 }
 .banner{
-    background: linear-gradient(to right, #c31432, #240b36);
-    height: 18vw;
-}
-.banner .over-banner{
-    background-image:  url(../images/contact_us_banner.png);
-    background-position-x: right;
-    background-position-y: center;
-    background-size: 30%;
+    background: url('../images/bann6.jpg');
     background-repeat: no-repeat;
-    height: 100%;
-}
-.over-banner h1{
-    color: white;
-    float: left;
-    font-size: 55px;
-    border-bottom: 1px dotted white;
-    margin: 3vw 0 0vw 3vw;
-    text-transform: uppercase;
-}
-.over-banner p{
-    color: white;
-    padding: 10vw 30vw 0 3vw;
-    text-align: justify;
-    white-space: pre-line;
-    position: absolute;
-}
-.over-banner img{
-    margin: 3vw 3vw 0 0;
-    float: right;
+    background-size: 100%;
+    height: 31vw;
 }
 .form h1{
     text-align: center;
